# Voucher-Tracker

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  deep-research-report (1).md  deep-research-report.md  docker-compose.yml  implementation-gap-checklist.md  pyproject.toml  render.yaml  sourcelist.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  feature-request.md  feature-request.yml  question-help.md  question-help.yml  source-suggestion.md  source-suggestion.yml
.github/workflows/: ci.yml
Sources/: Event_List.txt  README.md  RSS_List.txt  Subreddit.txt  Website_List.txt
docs/: architecture.md  configuration.md  detailed-summary.md  gemini-setup.md  groq-setup.md  project-info.md  reddit_setup.md  resend_setup.md  supabase_setup.md  testing.md
docs/details/: architecture.md  configuration.md  detailed-summary.md  project-info.md  schema.md  testing.md
docs/setup/: gemini-setup.md  groq-setup.md  reddit-setup.md  render-deployment.md  resend-setup.md  supabase-setup.md  uptime-bot-setup.md
migrations/: env.py
migrations/versions/: a3f7c1d2e890_add_events_and_dedup.py  b1f3e2a9d047_add_ai_result_to_posts.py  c684f43a8829_generic_sources_posts_keywords_schema.py  ca84fdb8ee85_generic_sources_posts_keywords_schema.py  e128fb481f2f_init_reddit_tables.py  e1c2d3a4b5f6_db_driven_scheduler.py  f2a8b9c0d1e2_add_is_notified_and_voucher_view.py  g3b9c0d1e2f3_schema_freeze_keywords.py  h4d5e6f7a8b9_add_vendor_mappings_and_posts_vendor.py  i9j0k1l2m3n4_add_url_pattern_to_vendor_mappings.py  j0k1l2m3n4o5_schema_freeze_vendor_mappings.py
scripts/: bootstrap_reddit.py  bootstrap_sources.py  generate_sourcelist.py  live_test_pipeline.py  test_ai_analysis.py  test_email.py  verify_sources.py
tests/: conftest.py  test_collectors.py  test_dedup.py  test_dispatcher.py  test_email_notifications.py  test_event_matcher.py  test_http_policy.py  test_main.py
voucherbot/: main.py
voucherbot/config/: settings.py
voucherbot/core/: exceptions.py  logging.py
voucherbot/database/: bootstrap.py  connection.py  init_db.py
(+33 files in other folders)
