[project]
name = "voucherbot"
version = "0.1.0"
description = "VoucherBot foundation"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.51.0",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "pydantic-settings==2.14.2",
    "structlog==26.1.0",
    "httpx==0.28.1",
    "asyncpraw==8.0.2",
    "apscheduler==3.11.3",
    "tenacity==9.1.4",
    "alembic==1.18.5",
    "pgvector==0.5.0",
    "feedparser==6.0.12",
    "beautifulsoup4==4.15.0",
    "lxml==6.1.1",
    "google-genai==2.12.1",
    "resend==2.34.0",
    "groq==1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.22",
    "mypy==2.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["voucherbot*"]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
]
